# remote-control

./: .gitignore  LICENSE  README.md  WEBRTC_CONNECTION_STABILITY.md  WEBRTC_INTEGRATION.md  WEBRTC_QUICKSTART.md  WEBRTC_SUMMARY.md
CentralServer/src/: config.py  main.py  server_controller.py
TrainClient/: Camera.py  CameraClient.py  NetworkWorker.py  README.md  TrainClient.py  globals.py  main.py  requirements.txt
TrainClient/src/: Encoder.py  NetworkWorker.py  TrainClient.py  globals.py
analysis/: RPi5_Capability.md  latency_analysis.ipynb  network_analysis.ipynb  network_strength_with_gps.ipynb  pre_process.ipynb  render_video_frame.ipynb  scenario.ipynb  stream_convert.ipynb  train_38db30da-99d3-490f-bc5b-f83f24c67406_latency_1756124665270_1756124730764.json
analysis/11_12_2025/: latency.json  train_e127f95e-e9a0-46d4-9ac0-6b9783533ec2_latency_1765452450000_1765452650000.json
analysis/2025_12_11/: latency_command.json
analysis/2025_12_18/: latency.json  latency_command.json  (+1 more)
central-server/: README.md  requirements.txt
remote-control/: package-lock.json  package.json  vue.config.js
train-client/: PIN_Setup.md  README.md  requirements-webrtc.txt  requirements.txt
train-client/src/connector/: .gitignore  MANIFEST.in  README.md  pylintrc.toml  pyproject.toml  requirements.txt
train-client/src/connector/connector/: __init__.py  connection.py  data.py  message_handler.py  serial_connection_handler.py
train-client/src/connector/test/: context.py  simple.py
web-client/: .gitignore  README.md  package-lock.json  package.json  vue.config.js
(+214 files in other folders)
